# Vibra

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.sh  limine.conf  linker.ld
.cargo/: config.toml
apps/: calc.vs  demo.vs  pong.vs  snake.vs
docs/: README.md  architecture.md  memory.md  roadmap.md  vibra_script.md
kernel/: Cargo.toml
kernel/src/: boot_log.rs  cpu_info.rs  framebuffer.rs  input.rs  lib.rs  main.rs  serial.rs  version.rs
kernel/src/acpi/: hpet.rs  madt.rs  mcfg.rs  mod.rs  rsdp.rs  sdt.rs
kernel/src/arch/: mod.rs
kernel/src/commands/: cd.rs  (+33 more)
src/: boot_log.rs  cpu_info.rs  framebuffer.rs  gdt.rs  keyboard.rs  main.rs  serial.rs  version.rs
src/commands/: about.rs  apic.rs  beep.rs  cat.rs  cd.rs  chmod.rs  clear.rs  cp.rs  diag.rs  echo.rs  edit.rs  free.rs  id.rs  kill.rs  kstat.rs  logo.rs  ls.rs  lspci.rs  mkdir.rs  mod.rs  mount.rs  mv.rs  neofetch.rs  pwd.rs  quit.rs  rm.rs  sdisk.rs  su.rs  sysinfo.rs  tasks.rs  test_disk.rs  top.rs  touch.rs  tree.rs  uname.rs  uptime.rs  usertest.rs  version.rs  whoami.rs
src/devices/: pc_speaker.rs  virtio_block.rs  virtio_net.rs
src/drivers/: ahci.rs  pci.rs
src/fs/: devtmpfs.rs  disk.rs  ext2.rs  fat32.rs  mod.rs  ramfs.rs  sysfs.rs  vfs.rs
src/interrupts/: apic.rs  idt.rs  mod.rs  pic.rs
src/kernel/: device.rs  mod.rs  module.rs
src/memory/: heap.rs  mod.rs  paging.rs  pmm.rs  vmm.rs
src/script/: lexer.rs  parser.rs  vm.rs
src/shell/: line_editor.rs  mod.rs
src/syscall/: mod.rs
src/task/: ctx_switch.rs  mod.rs  user.rs
vibra/: Cargo.toml
vibra/src/: main.rs
(+67 files in other folders)
